src/main/resources/kubernetes/deployment-spring-micro-with-actuator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-rest-with-actuator
  # allow for override: kubectl -n <ns> apply ...
  #namespace: default
spec:
  selector:
    matchLabels:
      app: spring-boot-rest-with-actuator
  # kubectl scale --replicas=x deployment/gunicorn-hello-world-web
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-boot-rest-with-actuator
      annotations:
        sidecar.istio.io/inject: "false"
    spec:

      containers:
      - name: spring-boot-rest-with-actuator
        image: fabianlee/spring-boot-rest-with-actuator:${VERSION}
        imagePullPolicy: Always

        # resource limits
        resources:
          requests:
            memory: "2048Mi"
            cpu: "1000m" # one vcpu
          limits:
            memory: "4096Mi"
            cpu: "2000m" # two vcpu

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10

        # check for initial readiness
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 20 
          periodSeconds: 10

      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-with-actuator
  #namespace: default
  labels:
    app: spring-boot-rest-with-actuator
  annotations:
    # set to true if you want our custom prometheus scraper to gather custom metrics
    prometheus.io/path: /actuator/prometheus
    prometheus.io/scrape: "false"
spec:
  ports:
  - port: 8080 # available at this service
    name: http
    targetPort: 8080 # exposed from inside container
    protocol: TCP
  - port: 8081 # available at this service
    name: http-actuator-metrics # ends with 'metrics' in case we want custom scraper to recognize
    targetPort: 8081 # exposed from inside container
    protocol: TCP
  selector:
    app: spring-boot-rest-with-actuator
